--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,17 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    background: url(https://images.unsplash.com/photo-1551033406-611cf9a28f67?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#main-content {
+    padding: 50px;
+    margin-top: 50px;
+    background: rgba(10, 10, 10, .4);
+}
 
 @media(min-width:700px) {
     #mob {
@@ -41,27 +52,26 @@ a:hover {
     margin-left: 50px;
 }
 
-body {
-    background-color: black;
-    background-image: linear-gradient(-90deg, black, rgb(41, 37, 37));
-}
 
 %inherittext {
     font-size: 6mm;
     text-align: $alignment;
-    color: gray;
+    color: white;
 }
 
 #aboutme,
 #text {
     @extend %inherittext;
     margin-top: 30px;
+    font-size: 4rem;
 
 }
 
 #contact {
     @extend %inherittext;
     margin-top: 200px;
+    font-weight: 800;
+    font-size: 5rem;
 }
 
 .fa:hover {
