--- a/style.css
+++ b/style.css
@@ -49,7 +49,8 @@ a:hover {
 }
 
 #aboutme,
-#text, #contact {
+#text,
+#contact {
   font-size: 6mm;
   text-align: center;
   color: white;
@@ -144,4 +145,5 @@ a.fa {
   display: block;
   background-color: lightcoral;
 }
+
 /*# sourceMappingURL=style.css.map */
