--- a/style.scss
+++ b/style.scss
@@ -16,28 +16,6 @@ body {
     background: rgba(10, 10, 10, .4);
 }
 
-@media(min-width:700px) {
-    #mob {
-        display: none;
-    }
-}
-
-@media(max-width:699px) {
-    #pc {
-        display: none;
-    }
-}
-
-.nav {
-    a {
-        color: white;
-        font-size: 8mm;
-        padding: 10px;
-        text-decoration: none;
-        text-align: $alignment;
-    }
-}
-
 a:hover {
     color: #E47A63;
 }
@@ -52,7 +30,6 @@ a:hover {
     margin-left: 50px;
 }
 
-
 %inherittext {
     font-size: 6mm;
     text-align: $alignment;
@@ -62,16 +39,32 @@ a:hover {
 #aboutme,
 #text {
     @extend %inherittext;
-    margin-top: 30px;
-    font-size: 4rem;
+    margin-top: 30%;
 
 }
 
 #contact {
     @extend %inherittext;
-    margin-top: 200px;
+    margin-top: 10%;
     font-weight: 800;
-    font-size: 5rem;
+
+}
+
+@media(min-width:700px) {
+
+    #text,
+    #contact {
+        font-size: 4rem;
+    }
+}
+
+@media(max-width:699px) {
+
+    #text,
+    #contact {
+        font-size: 1rem;
+
+    }
 }
 
 .fa:hover {
