--- a/style.css
+++ b/style.css
@@ -6,26 +6,13 @@ body {
   background: url(https://images.unsplash.com/photo-1551033406-611cf9a28f67?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80);
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
 }
 
 #main-content {
-  padding: 50px;
-  margin-top: 50px;
+  padding: 1%;
+  margin-top: 1%;
   background: rgba(10, 10, 10, 0.4);
-}
-
-a:hover {
-  color: #E47A63;
-}
-
-#avatar {
-  border-radius: 50%;
-  padding: 10px;
-  float: left;
-}
-
-#title {
-  margin-left: 50px;
 }
 
 #aboutme,
@@ -37,18 +24,18 @@ a:hover {
 
 #aboutme,
 #text {
-  margin-top: 30%;
+  margin-top: 5%;
 }
 
 #contact {
-  margin-top: 10%;
+  margin-top: 5%;
   font-weight: 800;
 }
 
 @media (min-width: 700px) {
   #text,
   #contact {
-    font-size: 4rem;
+    font-size: 3rem;
   }
 }
 
