--- a/style.scss
+++ b/style.scss
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    background: url(https://images.unsplash.com/photo-1551033406-611cf9a28f67?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80);
+    background: url(https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -151,11 +151,11 @@ a.fa {
 }
 
 .footer {
-    background: #212529;
+    background: #212529be;
     text-align: center;
-    font-size: 1rem;
+    font-size: 1.2rem;
     height: 10%;
-    color: black;
+    color: white;
 }
 
 .footer a {
@@ -207,8 +207,5 @@ hr:before {
 }
 
 p {
-    background: slategray;
-    opacity: .8;
-    border-radius: 10px;
     padding: 5px;
 }
