--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,8 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    display: grid;
+    grid-template-rows: 1fr auto
 }
 
 
@@ -151,11 +153,13 @@ a.fa {
 }
 
 .footer {
-    background: #212529be;
+    background: #22272bb9;
     text-align: center;
     font-size: 1.2rem;
     height: 10%;
     color: white;
+    grid-row-start: 2;
+    grid-row-end: 3;
 }
 
 .footer a {
